--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
@@ -4,8 +4,8 @@
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
-                        <img src="/static/images/gs_home_logo_en.svg" class="hidden-sm hidden-xs">
-                        <img src="/static/images/gs_small_logo_de.svg" class="visible-sm visible-xs">
+                        <img src="/static/images/gs_home_logo_en.svg?v=1" class="hidden-sm hidden-xs">
+                        <img src="/static/images/gs_small_logo_de.svg?v=1" class="visible-sm visible-xs">
                     </a>
                     <div class="navbar-header pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
@@ -35,7 +35,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="/static/images/logo/logo_text.png"
+                        <img src="/static/images/logo/logo_text.png?v=1"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
