remove v=1 from vendors

--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/page.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/page.html
@@ -10,9 +10,9 @@
   <title>{% block title %}GESIS Notebooks ({{version}}){% endblock %}</title>
   {% block head %}
   <link href="{{static_url("dist/styles.css")}}" rel="stylesheet"/>
-  <link href="/static/vendor/bootstrap/css/bootstrap.min.css?v=1" rel="stylesheet" />
+  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   {% endblock head %}
-  <script src="/static/vendor/jquery-3.2.1.min.js?v=1"></script>
+  <script src="/static/vendor/jquery-3.2.1.min.js"></script>
   <link href="/static/notebooks.css?v=1" rel="stylesheet" />
   <link id="favicon" rel="shortcut icon" type="image/png" href="/static/images/logo/logo.png?v=1" />
 
@@ -35,8 +35,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="/static/vendor/html5shiv.min.js?v=1"></script>
-      <script src="/static/vendor/respond.min.js?v=1"></script>
+      <script src="/static/vendor/html5shiv.min.js"></script>
+      <script src="/static/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
 
