--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -86,7 +86,7 @@
 {% endblock main %}
 
 {% block extra_js %}
-<script src="{{ url_for('static', filename='vendor/typed.js-2.0.6/lib/typed.min.js', v=1) }}"></script>
+<script src="{{ url_for('static', filename='vendor/typed.js-2.0.6/lib/typed.min.js') }}"></script>
 <script>
     var typed = new Typed('#typed',
         {
