--- a/orc_site/templates/page.html
+++ b/orc_site/templates/page.html
@@ -21,10 +21,10 @@
 
   <title>{% block title %}GESIS Notebooks ({{version}}){% endblock %}</title>
   {% block head %}
-  <script src="{{ url_for('static', filename='vendor/jquery-3.2.1.min.js', v=1) }}"></script>
-  <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js', v=1) }}"></script>
-  <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css', v=1) }}" rel="stylesheet" />
-{#  <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap-theme.min.css', v=1) }}" rel="stylesheet" />#}
+  <script src="{{ url_for('static', filename='vendor/jquery-3.2.1.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+  <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
+{#  <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap-theme.min.css') }}" rel="stylesheet" />#}
   <link href="{{ url_for('static', filename='notebooks.css', v=1) }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='orc_site.css', v=1) }}" rel="stylesheet" />
   <link id="favicon" rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='images/logo/logo.png', v=1) }}" />
@@ -36,8 +36,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="{{ url_for('static', filename='vendor/html5shiv.min.js', v=1) }}"></script>
-      <script src="{{ url_for('static', filename='vendor/respond.min.js', v=1) }}"></script>
+      <script src="{{ url_for('static', filename='vendor/html5shiv.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='vendor/respond.min.js') }}"></script>
     <![endif]-->
 </head>
 
