--- a/orc_site/templates/gesis/header.html
+++ b/orc_site/templates/gesis/header.html
@@ -4,7 +4,7 @@
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
-                        <img src="/static/images/gs_home_logo_en.svg" class="hidden-sm hidden-xs">
+                        <img src="/static/images/gs_home_logo_en.svg" class="hidden-sm hidden-xs" width="200" height="37">
                         <img src="/static/images/gs_small_logo_de.svg" class="visible-sm visible-xs">
                     </a>
                     <div class="navbar-header pull-right visible-xs hidden-sm hidden-md hidden-lg">
