added mybinder section

--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -3,6 +3,22 @@
 {% block main %}
 <div class="row form-group"></div>
 
+<div class="row">
+  <div id="logo-container">
+    <img id="home-mybinder-logo" src="/static/images/mybinder_full_logo.svg?v=1" alt="" width="370px">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <div id="mybinder-text" class="text-center">
+      <div id="explanation">
+        Have a repository full of Jupyter notebooks? With Binder, open those notebooks in an executable environment, making your code immediately reproducible by anyone, anywhere.
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="row form-group text-center project-text">
 {#    <div class="col-lg-1 col-md-1"></div>#}
 {#    <div class="col-lg-10 col-lg-offset-1 text-center">#}
