--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -119,8 +119,8 @@ header .navbar-default{
 }
 
 #navbar-list > li > a {
-	padding-left: 12px;
-	padding-right: 12px;
+	padding-left: 11.9px;
+	padding-right: 11.9px;
 }
 
 .navbar-default .dropdown, .navbar-default .dropdown>a, .navbar-default .dropdown-menu>li>a, .navbar-default .dropdown-menu, .navbar-default .navbar-nav .open .dropdown-menu>li>a {
@@ -335,10 +335,29 @@ footer {
   height: 100%;
 }
 
+#logo-container {
+	text-align: center;
+	padding: 16px;
+}
+#home-mybinder-logo {
+	padding: 16px 4px 30px 4px;
+}
+
+#mybinder-text {
+	margin-left: 5%;
+	width: 90%;
+	padding-bottom: 24px;
+}
+
 /*Binder*/
 #how-it-works, #explanation {
     font-weight: normal;
     line-height: 1.4;
+}
+
+#explanation {
+	color: rgb(40, 40, 40);
+	font-size: 20px;
 }
 
 .use-examples > img{
