move gesis notebooks logos into logo folder and rename. remove not used logo. add new version for notebooks.css. uncomment new how-it-works section

--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
@@ -4,7 +4,7 @@
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
-                        <img src="/static/images/gs_home_logo_en.svg?v=1" class="hidden-sm hidden-xs">
+                        <img src="/static/images/gs_home_logo_en.svg?v=1" class="hidden-sm hidden-xs" width="200" height="37">
                         <img src="/static/images/gs_small_logo_de.svg?v=1" class="visible-sm visible-xs">
                     </a>
                     <div class="navbar-header pull-right visible-xs hidden-sm hidden-md hidden-lg">
@@ -71,7 +71,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="/static/images/logo/logo_text.png?v=1"
+                        <img src="/static/images/logo/logo_text_2.png?v=1"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
