--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -4,12 +4,6 @@
 <div class="row form-group"></div>
 
 <div class="row">
-  <div id="logo-container">
-    <img id="home-mybinder-logo" src="/static/images/mybinder_full_logo.svg?v=1" alt="" width="370px">
-  </div>
-</div>
-
-<div class="row">
   <div class="col-lg-12">
     <div id="mybinder-text" class="text-center">
       <div id="explanation">
@@ -35,13 +29,12 @@
 
 <div class="row form-group"></div>
 <div class="row form-group"></div>
-{#
 <div class="row form-group"></div>
 
 <div class="row form-group text-center display-flex">
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
-      <img src="/static/images/mybinder_vector_logo.svg" alt="MyBinder Logo">
+      <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
       <div class="caption">
         <h3>Build repositories like <a href="#">mybinder.org</a></h3>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
@@ -50,7 +43,7 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
-      <img src="/static/images/jupyter_vector_logo.svg" alt="Jupyter Logo">
+      <img src="/static/images/jupyter_vector_logo.svg?v=1" alt="Jupyter Logo">
       <div class="caption">
         <h3>Persist /projects like a <a href="#">Jovian</a></h3>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod </p>
@@ -59,7 +52,7 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
-      <img src="/static/images/gs_no_text_vector_logo.svg" alt="Gesis Notebooks Logo">
+      <img src="/static/images/logo/logo_new.svg?v=1" alt="Gesis Notebooks Logo">
       <div class="caption">
         <h3>Interact with your work in a live environment</h3>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor </p>
@@ -67,7 +60,7 @@
     </div>
   </div>
 </div>
-#}
+
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
     <div class="col-lg-12 text-center">
