--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/nav.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/nav.html
@@ -3,7 +3,7 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid"
                  style="color: #58748f; background-color: #cdd5dd; border: none; border-radius: 0; padding: 0;">
-                <div class="navbar-header">
+                <div>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                             aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
