fix headline and featured projects

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -22,7 +22,7 @@
   <div id="header" class="text-center" style="border-bottom: 0; padding-top: 12px;">
   {#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
     <div id="explanation" style="font-size: 1.8em;">
-      Have a Binder-Ready repository? With the Persistent BinderHub, turn this repository into a persistent Jupyter environment, allowing you to continue your work from anywhere at any time.
+      Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your analysis from anywhere at any time.
     </div>
   </div>
   {% endblock binder_header %}
@@ -288,11 +288,9 @@
   <div class="row text-center">
     <h3>questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h3>
   </div>
-</div>
 
-<div class="row form-group"></div>
-<div class="row form-group"></div>
-
+  <div class="row form-group"></div>
+  <div class="row form-group"></div>
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
     <div class="col-lg-12 text-center">
@@ -319,6 +317,7 @@
     </div>
   </div>
   {% endfor %}
+</div>
 </div>
 {% endblock %}
 
