--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -5,7 +5,7 @@
 
 <div id="mybinder-text" class="text-center">
   <div id="explanation">
-    Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your work from anywhere at any time.
+    Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your analysis from anywhere at any time.
   </div>
 </div>
 
