--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -52,7 +52,7 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
-      <img src="/static/images/open_science_logo.png?v=1" alt="Gesis Notebooks Logo">
+      <img src="/static/images/open_science_logo.png?v=1" alt="Open Source Logo">
       <div class="caption">
         <h3>Open Science</h3>
         {#<h3>Support open scientific research</h3>#}
