--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -62,6 +62,10 @@
   </div>
 </div>
 
+<div class="row text-center" style="margin-bottom : 20px;" >
+  <h3 style="margin-top : 0px;" >questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h3>
+</div>
+
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
     <div class="col-lg-12 text-center">
