update templates and css

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -19,9 +19,9 @@
 {% block main %}
 <div class="container">
   {% block binder_header %}
-  <div id="header" class="text-center" style="border-bottom: 0; padding-top: 12px;">
+  <div id="header" class="text-center">
   {#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
-    <div id="explanation" style="font-size: 1.8em;">
+    <div id="explanation">
       Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your analysis from anywhere at any time.
     </div>
   </div>
@@ -250,8 +250,9 @@
   </div>
   <div class="row form-group"></div>
   <div class="row form-group"></div>
+  <div class="row form-group"></div>
   {% block how_it_works %}
-  <div class="row form-group text-center display-flex">
+  <div class="row text-center display-flex">
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <div class="use-examples">
         <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
@@ -283,7 +284,7 @@
   {% endblock how_it_works %}
 
   <div class="row text-center">
-    <h3>questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h3>
+    <h3 style="margin-top: 0;" >questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h3>
   </div>
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
