launch featured projects on gesis hub. share gesis templates of bhub and jhub in gesishub. add logout_url.

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -288,10 +288,10 @@
   </div>
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
-    <div class="col-lg-12 text-center">
+    <div class="col-lg-12">
 {#    <div class="col-lg-10 col-lg-offset-1">#}
 {#        <div class="text-center">#}
-            <h2>Featured projects</h2>
+            <h2>Featured Projects</h2>
 {#        </div>#}
     </div>
 </div>
