truncate long repo display names in projects table

--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -373,3 +373,14 @@ footer {
 	width: auto;
 }
 
+/* projects table  */
+td.projects-display-name {
+    vertical-align: middle;
+}
+/* truncate long repo display names */
+td.projects-display-name {
+    max-width: 50ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
