--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -15,6 +15,18 @@
  * For ORC  project this is taken from GESIS SSOAR project and customized.
  */
 
+@media (max-width:768px) {
+
+	.navbar-brand {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+
+	.nav > li > a > button {
+		margin: 0px;
+	}
+}
+
 @media (min-width:1200px) {.container{width:960px;}}
 
 @media(min-width:992px) {.container{width:960px;}}
@@ -383,4 +395,3 @@ td.projects-display-name {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
