--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -34,44 +34,39 @@
       <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
       <div class="caption">
         <h3>Import</h3>
-        {#<h3>Build repositories like <a href="#">mybinder.org</a></h3>#}
-        <p>Enter your repository information in the Binder form. We build and launch your <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">binder-ready</a> repository like <a href="https://mybinder.org">MyBinder.org</a>.</p>
+        <p>Enter your repository information and we build and launch your <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">binder-ready</a> repository like <a href="https://mybinder.org">MyBinder.org</a>.</p>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
-      <img src="/static/images/jupyter_vector_logo.svg?v=1" alt="Jupyter Logo">
+      <img src="/static/images/powered_by_jupyter_logo.svg?v=1" alt="Jupyter Logo">
       <div class="caption">
         <h3>Persistent Environment</h3>
-        {#<h3>Persist /projects like a <a href="#">Jovian</a></h3>#}
-        <p>Once a repository has been built it will be added to the list of your projects. Your projects have a persistent $HOME directory saving your work in the <a href="https://jupyter.org">Jupyter</a> environment.</p>
+        <p>Once a repository has been built it will be added to the list of your projects saving your work in a persistent <a href="https://jupyter.org">Jupyter</a> environment.</p>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
-      <img src="/static/images/open_science_logo.png?v=1" alt="Open Source Logo">
+      <img src="/static/images/open_science_logo.png?v=1" alt="Open Science Logo">
       <div class="caption">
         <h3>Open Science</h3>
-        {#<h3>Support open scientific research</h3>#}
-        <p>The service supports the publication of reproducible and executable analysis workflows. GESIS Notebooks is freely available and builds on <a href="https://github.com/gesiscss/orc">open-source</a> software.</p>
+        <p>This <a href="https://www.go-fair.org">FAIR</a> open access service supports open methodology with reproducible and transparent documentation of data analysis.</p>
       </div>
     </div>
   </div>
 </div>
 
   <div class="row text-center">
-    <h3 style="margin-top: 0;" >questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h3>
+    <h4 style="margin-top: 16px;" >questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h4>
   </div>
 
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
     <div class="col-lg-12">
 {#    <div class="col-lg-10 col-lg-offset-1">#}
-{#        <div class="text-center">#}
             <h2>Featured Projects</h2>
-{#        </div>#}
     </div>
 </div>
 
