--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -7,7 +7,7 @@
                         <img src="/static/images/gs_home_logo_en.svg?v=1" class="hidden-sm hidden-xs" width="200" height="37">
                         <img src="/static/images/gs_small_logo_de.svg?v=1" class="visible-sm visible-xs">
                     </a>
-                    <div class="navbar-header pull-right visible-xs hidden-sm hidden-md hidden-lg">
+                    <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
                             {% if active == 'home' %}
                             <li>
