--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -28,7 +28,7 @@
 <div class="row form-group"></div>
 <div class="row form-group"></div>
 
-<div class="row text-center display-flex">
+<div class="row text-center display-flex" style="margin-top: 48px; margin-bottom: 32px;">
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
       <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
@@ -58,10 +58,7 @@
   </div>
 </div>
 
-  <div class="row text-center">
-    <h4 style="margin-top: 16px;" >questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</h4>
-  </div>
-
+<div class="row form-group"></div>
 {#<div class="row form-group page-header">#}
 <div class="row form-group">
     <div class="col-lg-12">
