--- a/orc_site/templates/gesis/footer.html
+++ b/orc_site/templates/gesis/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container footer-container">
       <span class="footer-span">
           <img src="/static/images/leibniz_logo_en_white.svg?v=1" width="78" height="54" alt="Leibniz Logo"/>
       </span>
