--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -28,7 +28,7 @@
 <div class="row form-group"></div>
 <div class="row form-group"></div>
 
-<div class="row text-center display-flex" style="margin-top: 48px; margin-bottom: 32px;">
+<div class="row text-center display-flex" style="margin: 48px 0px 32px 0px;">
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
       <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
@@ -43,7 +43,7 @@
       <img src="/static/images/powered_by_jupyter_logo.svg?v=1" alt="Jupyter Logo">
       <div class="caption">
         <h3>Persistent Environment</h3>
-        <p>Once a repository has been built it will be added to the list of your projects saving your work in a persistent <a href="https://jupyter.org">Jupyter</a> environment.</p>
+        <p>Once a repository has been built it will be added to your list of projects saving your work in a persistent <a href="https://jupyter.org">Jupyter</a> environment.</p>
       </div>
     </div>
   </div>
@@ -60,14 +60,37 @@
 
 <div class="row form-group"></div>
 {#<div class="row form-group page-header">#}
-<div class="row form-group">
+<div class="row form-group featured-projects">
     <div class="col-lg-12">
 {#    <div class="col-lg-10 col-lg-offset-1">#}
             <h2>Featured Projects</h2>
     </div>
 </div>
 
-<div class="row form-group text-center display-flex">
+<div class="row form-group text-left display-flex featured-projects">
+  {#
+  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="thumbnail">
+      <div class="caption" style="padding:5px;">
+        <h4 style="margin:0px;"><a href="https://github.com/CWTSLeiden/CSSS">Scientometrics Summer School</a>
+         <br>
+         <b>By</b> <i>Vincent Traag</i>
+         <br>
+         <small>Centre for Science and Technology Studies, Leiden University</small>
+        </h4>
+        <p>In these Notebooks, you will learn how to perform scientometric network analysis.</p>
+          <div style="display: inline-block; vertical-align:middle;">
+            <div style="display: inline-block;">
+                <b>Language:</b> Python
+            </div>
+            <div style="display: inline-block; float: right;">
+              <a href="#" class="btn btn-warning orc-button" role="button" style="align:right;">Launch Binder</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    #}
   {% for example in binder_examples %}
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="thumbnail">
