replaced launch button, more alignment

--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -68,10 +68,10 @@
 </div>
 
 <div class="row form-group text-left display-flex featured-projects">
-  {#
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+{#
+  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-example">
     <div class="thumbnail">
-      <div class="caption" style="padding:5px;">
+      <div class="caption" style="padding:8px;">
         <h4 style="margin:0px;"><a href="https://github.com/CWTSLeiden/CSSS">Scientometrics Summer School</a>
          <br>
          <b>By</b> <i>Vincent Traag</i>
@@ -84,15 +84,15 @@
                 <b>Language:</b> Python
             </div>
             <div style="display: inline-block; float: right;">
-              <a href="#" class="btn btn-warning orc-button" role="button" style="align:right;">Launch Binder</a>
+              <a href="#"  style="align:right;"><img src="/static/images/badge_logo.svg?v=1"" alt="Launch Binder"></a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    #}
+#}
   {% for example in binder_examples %}
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-example">
     <div class="thumbnail">
 {#      <img src="..." alt="...">#}
       <div class="caption">
