--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -249,6 +249,8 @@ div.trail-wrapper.hidden-print > div.container > div.row{
 	/*overflow: hidden;*/
 	background-color: #fff;
 	margin-top: -20px;
+	padding-left: 16px;
+	padding-right: 16px;
 	}
 
 
@@ -368,10 +370,10 @@ footer {
 }
 
 #header {
-	margin-left: 5%;
+	margin-left: 4%;
 	margin-bottom: 32px;
 	margin-top: 32px;
-	width: 90%;
+	width: 92%;
 	border-bottom: 0;
   padding-top: 12px;
   padding-bottom: 24px;
@@ -403,8 +405,14 @@ footer {
 }
 
 .featured-projects {
-	padding-left: 1.6rem;
-	padding-right: 1.6rem;
+	padding-left: 2.4rem;
+	padding-right: 2.4rem;
+}
+
+.project-example {
+	margin-bottom: 16px;
+	padding-right: 8px;
+	padding-left: 8px;
 }
 
 .use-examples > img{
